// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for a "APP" root component and a component with branch "develop" 1`] = `
<td
  className="measure-details-component-cell"
>
  <div
    className="text-ellipsis"
  >
    <ForwardRef(Link)
      className="link-no-underline"
      id="component-measures-component-link-foo"
      to={
        {
          "pathname": "/component_measures",
          "search": "?id=foo&metric=bugs&branch=develop&view=list&selected=foo",
        }
      }
    >
      <span
        title="foo"
      >
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
        <span>
          Foo
        </span>
        <BranchIcon
          className="spacer-left little-spacer-right"
        />
        <span
          className="note"
        >
          develop
        </span>
      </span>
    </ForwardRef(Link)>
  </div>
</td>
`;

exports[`should render correctly for a "APP" root component and a component with branch "undefined" 1`] = `
<td
  className="measure-details-component-cell"
>
  <div
    className="text-ellipsis"
  >
    <ForwardRef(Link)
      className="link-no-underline"
      id="component-measures-component-link-foo"
      to={
        {
          "pathname": "/component_measures",
          "search": "?id=foo&metric=bugs&view=list&selected=foo",
        }
      }
    >
      <span
        title="foo"
      >
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
        <span>
          Foo
        </span>
        <span
          className="spacer-left badge"
        >
          branches.main_branch
        </span>
      </span>
    </ForwardRef(Link)>
  </div>
</td>
`;

exports[`should render correctly for a "TRK" root component and a component with branch "develop" 1`] = `
<td
  className="measure-details-component-cell"
>
  <div
    className="text-ellipsis"
  >
    <ForwardRef(Link)
      className="link-no-underline"
      id="component-measures-component-link-foo"
      to={
        {
          "pathname": "/component_measures",
          "search": "?id=foo&metric=bugs&branch=develop&view=list&selected=foo",
        }
      }
    >
      <span
        title="foo"
      >
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
        <span>
          Foo
        </span>
      </span>
    </ForwardRef(Link)>
  </div>
</td>
`;

exports[`should render correctly for a "TRK" root component and a component with branch "undefined" 1`] = `
<td
  className="measure-details-component-cell"
>
  <div
    className="text-ellipsis"
  >
    <ForwardRef(Link)
      className="link-no-underline"
      id="component-measures-component-link-foo"
      to={
        {
          "pathname": "/component_measures",
          "search": "?id=foo&metric=bugs&view=list&selected=foo",
        }
      }
    >
      <span
        title="foo"
      >
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
        <span>
          Foo
        </span>
      </span>
    </ForwardRef(Link)>
  </div>
</td>
`;

exports[`should render correctly for a "VW" root component and a component with branch "develop" 1`] = `
<td
  className="measure-details-component-cell"
>
  <div
    className="text-ellipsis"
  >
    <ForwardRef(Link)
      className="link-no-underline"
      id="component-measures-component-link-foo"
      to={
        {
          "pathname": "/component_measures",
          "search": "?id=foo&metric=bugs&branch=develop&view=list&selected=foo",
        }
      }
    >
      <span
        title="foo"
      >
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
        <span>
          Foo
        </span>
        <BranchIcon
          className="spacer-left little-spacer-right"
        />
        <span
          className="note"
        >
          develop
        </span>
      </span>
    </ForwardRef(Link)>
  </div>
</td>
`;

exports[`should render correctly for a "VW" root component and a component with branch "undefined" 1`] = `
<td
  className="measure-details-component-cell"
>
  <div
    className="text-ellipsis"
  >
    <ForwardRef(Link)
      className="link-no-underline"
      id="component-measures-component-link-foo"
      to={
        {
          "pathname": "/component_measures",
          "search": "?id=foo&metric=bugs&view=list&selected=foo",
        }
      }
    >
      <span
        title="foo"
      >
        <QualifierIcon
          className="little-spacer-right"
          qualifier="TRK"
        />
        <span>
          Foo
        </span>
        <span
          className="spacer-left badge"
        >
          branches.main_branch
        </span>
      </span>
    </ForwardRef(Link)>
  </div>
</td>
`;

exports[`should render correctly: default 1`] = `
<td
  className="measure-details-component-cell"
>
  <div
    className="text-ellipsis"
  >
    <ForwardRef(Link)
      className="link-no-underline"
      id="component-measures-component-link-foo:src/index.tsx"
      to={
        {
          "pathname": "/component_measures",
          "search": "?id=foo&metric=bugs&view=list&selected=foo%3Asrc%2Findex.tsx",
        }
      }
    >
      <span
        title="foo:src/index.tsx"
      >
        <QualifierIcon
          className="little-spacer-right"
          qualifier="FIL"
        />
        <span
          className="note"
        >
          src
          /
        </span>
        <span>
          index.tsx
        </span>
      </span>
    </ForwardRef(Link)>
  </div>
</td>
`;
